<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainPage">

        <ImageView
            android:id="@+id/ivBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".19" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/gl1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/desc"
                android:padding="3dp"
                android:src="@drawable/newlogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/itc"
                android:text="@string/room_no_000"
                android:textColor="#2a8687"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/gl3"
                app:layout_constraintStart_toEndOf="@id/ivLogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/itc"
                android:text="@string/karlvin_ang"
                android:textColor="#2a8687"
                android:textSize="23sp"
                app:layout_constraintStart_toEndOf="@id/ivLogo"
                app:layout_constraintTop_toBottomOf="@id/gl3" />


            <TextClock
                android:id="@+id/tvCountry"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/itc"
                android:gravity="bottom|end"
                android:padding="5dp"
                android:text="00:00 AM"
                android:format12Hour="hh:mm a"
                android:textColor="#2a8687"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/gl3"
                app:layout_constraintEnd_toEndOf="@id/gl4"
                app:layout_constraintStart_toStartOf="@id/gl5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/itc"
                android:gravity="end|top"
                android:padding="5dp"
                android:text="@string/monday_14_march_2023_33_c"
                android:textColor="#2a8687"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl4"
                app:layout_constraintStart_toStartOf="@id/gl5"
                app:layout_constraintTop_toTopOf="@id/gl3" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/desc"
                android:padding="7dp"
                android:src="@drawable/w01d"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/gl4"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".92" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000"
                android:orientation="vertical"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/itc"
                    android:lineSpacingExtra="5dp"
                    android:padding="20dp"
                    android:text="@string/welcome_mr_karlvin_ang"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <!--                <ImageView-->
                <!--                    android:src="@drawable/logonew1"-->
                <!--                    android:layout_weight="2"-->
                <!--                    android:layout_gravity="center"-->
                <!--                    android:layout_width="300dp"-->
                <!--                    android:layout_height="0dp"/>-->
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl6"
            app:layout_constraintTop_toTopOf="@id/gl1">


            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:padding="5dp"
                android:focusable="true"
                android:id="@+id/ivTv"
                android:src="@drawable/a1"
                app:layout_constraintBottom_toBottomOf="@id/gl7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/desc" >

            </ImageView>

            <TextView
                android:text="@string/tv"
                app:layout_constraintEnd_toEndOf="@id/gl10"
                app:layout_constraintStart_toStartOf="@id/gl9"
                app:layout_constraintBottom_toBottomOf="@id/gl7"
                android:layout_marginBottom="60sp"
                android:fontFamily="@font/itc"
                android:textColor="#231c51"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:padding="5dp"
                android:focusable="true"
                android:id="@+id/ivMessage"
                android:src="@drawable/a4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/gl7"
                android:contentDescription="@string/desc" />

            <TextView
                android:text="@string/message"
                app:layout_constraintEnd_toEndOf="@id/gl10"
                app:layout_constraintStart_toStartOf="@id/gl9"
                app:layout_constraintBottom_toBottomOf="@id/ivMessage"
                android:layout_marginBottom="60sp"
                android:fontFamily="@font/itc"
                android:textColor="#231c51"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:padding="5dp"
                android:focusable="true"
                android:id="@+id/ivNetflix"
                android:src="@drawable/a2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl8"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/desc" />

            <TextView
                android:text="@string/netflix"
                app:layout_constraintEnd_toEndOf="@id/ivNetflix"
                app:layout_constraintStart_toStartOf="@id/ivNetflix"
                app:layout_constraintBottom_toBottomOf="@id/ivNetflix"
                android:layout_marginBottom="60sp"
                android:fontFamily="@font/itc"
                android:textColor="#231c51"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:padding="5dp"
                android:focusable="true"
                android:src="@drawable/a3"
                android:id="@+id/ivHotelInfo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/gl8"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/desc" />

            <TextView
                android:text="@string/hotel_info"
                app:layout_constraintEnd_toEndOf="@id/ivHotelInfo"
                app:layout_constraintStart_toStartOf="@id/ivHotelInfo"
                app:layout_constraintBottom_toBottomOf="@id/ivHotelInfo"
                android:layout_marginBottom="60sp"
                android:fontFamily="@font/itc"
                android:textColor="#231c51"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:padding="5dp"
                android:src="@drawable/a5"
                app:layout_constraintBottom_toTopOf="@id/ivHotelInfo"
                app:layout_constraintStart_toStartOf="@id/gl8"
                android:contentDescription="@string/desc" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:padding="5dp"
                android:src="@drawable/a5"
                app:layout_constraintTop_toBottomOf="@id/ivNetflix"
                app:layout_constraintEnd_toEndOf="@id/gl8"
                android:contentDescription="@string/desc" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".75" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>