<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertParent"
        android:layout_width="match_parent"
        android:background="#bb081e"
        android:layout_height="match_parent">

        <TextView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/g1"
            android:text="@string/emergency"
            android:textColor="@color/white"
            android:fontFamily="@font/dn"
            android:id="@+id/tVem"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/tVem"
            app:layout_constraintEnd_toEndOf="@id/tVem"
            app:layout_constraintStart_toStartOf="@id/tVem"
            android:text="@string/em"
            android:textColor="@color/white"
            android:fontFamily="@font/dn"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/g1"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/desc"
                android:src="@drawable/newlogo" />

            <View
                android:background="#fff"
                android:layout_width="2dp"
                android:id="@+id/border"
                app:layout_constraintStart_toEndOf="@id/logo"
                app:layout_constraintTop_toTopOf="@id/logo"
                app:layout_constraintBottom_toBottomOf="@id/logo"
                android:layout_height="match_parent"/>

            <FrameLayout
                android:paddingStart="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/border"
                tools:ignore="RtlSymmetry">

                <com.ph.bittelasia.meshtv.tv.glasshoteldemo.database.util.MarqueeView
                    android:id="@+id/broadcast"
                    android:background="#002CFF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:text_color="@android:color/white"
                    app:txt_spacing="15dp"
                    app:text_shadowColor="@android:color/black"
                    app:txt_dx="1.0"
                    app:txt_dy="1.0"
                    app:txt_radius="1.0"
                    app:text_size="30sp"
                    app:speed="40dp"
                    android:layout_gravity="center_vertical" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".80"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>